# LegacyLauncher

./: .gitignore  CMakeLists.txt  Launcher.sln  README.md  build_and_launch.bat
.github/workflows/: build-release.yml
Injector/: CustomRenderers.h  Injector.vcxproj  Injector.vcxproj.filters  Main.cpp
Injector/Libs/Config/: Config.h
Injector/Libs/ImGui/: imgui.cpp  imgui.h
Injector/Libs/Networking/: HTTPHelper.cpp  HTTPHelper.h  HTTPSHelper.cpp  HTTPSHelper.h  LCEOnlineServices.cpp  LCEOnlineServices.h
Injector/Libs/Panorama/: PanoramaRenderer.cpp  PanoramaRenderer.h  stb_image.h
Injector/Libs/ResourcePuller/: ResourcePuller.cpp
Injector/Libs/Window/: MojanglesTTF.cpp  WindowHelper.cpp  WindowHelper.h
Injector/Managers/DownloadManager/: DownloadManager.cpp
Injector/Managers/VersionManager/: VersionManager.cpp  VersionManager.h
Launcher/: Launcher.aps  Launcher.vcxproj.filters  Main.cpp  Resource.rc  resource.h
Launcher/Libs/Config/: Config.cpp  Config.h
Launcher/Libs/Panorama/: PanoramaRenderer.cpp
Launcher/Libs/ResourcePuller/: ResourcePuller.h
Launcher/Libs/SoundEngine/: SoundEngine.h
Launcher/Libs/Window/: WindowHelper.cpp  WindowHelper.h  readme.txt
Launcher/Managers/DownloadManager/: DownloadManager.h
docs/: architecture.md
resources/: resources.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/services/: InstallService.cpp  InstallService.h  ProfileStore.cpp  ProfileStore.h  ReleaseClient.cpp  ReleaseClient.h
